--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer utilities {
+  .rich-text h2 {
+    @apply mb-3 text-2xl font-semibold text-neutral-900;
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  .rich-text h3 {
+    @apply mb-3 text-xl font-semibold text-neutral-900;
+  }
+  .rich-text h4 {
+    @apply mb-3 text-lg font-semibold text-neutral-900;
+  }
+
+  .rich-text p {
+    @apply mb-3 leading-snug text-neutral-700;
+  }
+   .rich-text strong {
+    @apply mb-3 leading-snug text-neutral-900 font-bold;
+  }
+  code {
+    display: block;
+    font-weight: 400;
+    text-align: left;
+    line-height: 1.6em;
+    white-space: pre;
+    padding: 1em 2%;
+    border: 2px solid rgb(204, 204, 204);
+    border-radius: 0.25em;
+    background-color: #14213D;
+    color: rgb(255, 255, 255);
+    margin: 1% 0
+  }
 }
