--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,7 @@
     font-weight: 400;
     text-align: left;
     line-height: 1.6em;
-    white-space: pre;
+    white-space: break-spaces;
     padding: 1em 2%;
     
     border-radius: 0.25em;
